--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,6 @@ main{
 .container{
     background-color: #FFFFFF;
     width: 1050px;
-    /* padding: 30px;
-    margin-top: 21px;
-    border-radius: 5px; */
 }
 
 /*-----------------
@@ -42,13 +39,14 @@ h1{
     margin-bottom: 27px;
     margin-top: 0;  
 }
-.h1-button a{
+.more-button{
      color: white;
      text-decoration: none;
      background-color: #E02C6D;
      padding: 10px 24px;
      font-family: 'Poppins', sans-serif;
      font-weight: 500;
+     border-radius: 5px;
 }
 .fa-arrow-right{
     padding-left: 8px;
@@ -67,10 +65,7 @@ h1{
 }
 
 /* Player details part */
-/* .container{
-    display: flex;
-    justify-content: center;
-} */
+
 .players{
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -100,6 +95,31 @@ h1{
     font-size: 16px;
     color: #6C6C6C;
     line-height: 26px;
+}
+
+/* Latest videos part */
+.videos-header{
+    margin-top: 70px;
+    margin-left: 130px;
+    margin-right: -150px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.videos-header h2{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 28px;
+    color: #18191F;
+}
+.videos{
+    margin-left: 105px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-column-gap: 5px;
+}
+.last-two-videos{
+    padding: 20px;   
 }
 
 /* footer part */
@@ -137,3 +157,4 @@ footer p{
     font-size: 18px;
     text-align: center;
 }
+/* media query */
