--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,15 @@
 
 
 /* common styles/ utilities */
+/* html{
+    display: contents;
+} */
 body{
-    margin: 0%;
+    margin: 0;
 }
+/* body, html { 
+    overflow-x:hidden; 
+} */
 main{
     display: flex;
     flex-direction: column;
@@ -53,7 +59,7 @@ h1{
      border-radius: 5px;
 }
 .more-button:hover{
-    background-color: rgba(0, 255, 255, 0.712);
+    background-color: rgba(129, 93, 93, 0.712);
 }
 .fa-arrow-right{
     padding-left: 8px;
@@ -110,9 +116,9 @@ h1{
 
 /* Latest videos part */
 .videos-header{
+    width: 100%;
     margin-top: 70px;
-    margin-left: 130px;
-    margin-right: -150px;
+    margin-left: 138px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -212,33 +218,32 @@ footer p{
     text-align: center;
 }
 
-/* media query */
+/*....................
+      media query
+.................... */
+
 /* mobile screen */
 @media screen and (max-width: 688px) {
-    body {
-      margin: 0%;
+    .container{
+        width: 100%;
     }
-    
+    header{
+        width: 100%;
+        height: 695px;
+      }
+      .h1-button{
+          width: 100%;
+        margin: 70px 66px 20px 16px;
+      }
+      h1{
+          font-size: 36px;
+          margin-right: 84px;
+      }
     .banner{
-        width: 105%;
+        width: 101%;
         display: flex;
         flex-direction: column;
-  }
-  .container{
-      width: 100%;
-  }
-  header{
-    width: 100%;
-    height: 695px;
-  }
-  .h1-button{
-      width: 100%;
-    margin: 70px 66px 20px 16px;
-  }
-  h1{
-      font-size: 36px;
-      margin-right: 100px;
-  }
+  } 
   .banner img{
     width: 329px;
     height: 260px;
@@ -271,17 +276,88 @@ footer p{
       margin-left: 70px;
   }
   .footer-part{
+     margin: 57px 0px 53px -33px;
+    }
+    .footer-img{
+        width: 375px;
+    }
+    .footer-img img{
+        width: 60%;
+        margin-left: 94px;
+    }
+    .icons{
+        width: fit-content;
+        margin-left: 135px;
+    }
+    .footer-part p{
+        margin-left: 55px;
+    }
+   
+}
+
+/* Tablet screen */
+@media only screen and (min-width:689px) and (max-width:992px) {
+    .container{
+        width: 685px;
+    }
+    header{
+        width: 100%;
+        height: 550px;
+      }
+      .h1-button{
+          width: 48%;
+        margin: 130px 0px 30px 20px;
+      }
+      h1{
+        font-size: 45px;
+        margin-right: 30px;
+      }
+      .banner {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        height: 550px;
+      }
+  .banner img{
+    width: 344px;
+    height: 282px;
+    margin: 123px 16px 61px 15px;
+   
+  }
+  .players, .videos{
+      grid-template-columns: repeat(2,1fr);  
+      grid-column-gap: 30px;  
+  }
+  .player img{
+      width: 100%;
+  }
+  .videos-header{
+      margin-bottom: 20px;
+      margin-left: 30px;
+      margin-right: 0;
+      width: 90%;
+  }
+  .videos{
+      width: 50%;
+      margin-left: 20px;
+      grid-row-gap: 10px;
+  }
+  .clubs{
+    grid-template-columns: repeat(2,1fr);    
+}
+  .club-logo{
+      margin-left: 70px;
+  }
+  .footer-part{
+    text-align: center;
      margin: 58px 0px 63px -45px;
     }
     .footer-img img{
         width: 60%;
-        margin-left: 70px;
+        margin-left: -17px;
     }
     .icons{
         width: fit-content;
-        margin-left: 100px;
+        margin-left: 300px;
     }
 }
-
-/* Tablet screen */
-
